crates/pardosa-schema/tests/compile_fail/cow_genome_safe.rs
use pardosa_schema::GenomeSafe;
fn main() {
    let _ = <std::borrow::Cow<'_, str> as GenomeSafe>::SCHEMA_HASH;
}
