crates/pardosa-schema/tests/compile_fail/cow_genome_safe.stderr
error[E0277]: the trait bound `Cow<'_, str>: GenomeSafe` is not satisfied
 --> tests/compile_fail/cow_genome_safe.rs:3:14
  |
3 |     let _ = <std::borrow::Cow<'_, str> as GenomeSafe>::SCHEMA_HASH;
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `GenomeSafe` is not implemented for `Cow<'_, str>`
  |
  = help: the following other types implement trait `GenomeSafe`:
            ()
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
          and $N others
